--- a/src/styles/overall.css
+++ b/src/styles/overall.css
@@ -27,6 +27,18 @@ html {
     margin: 0 auto;
 }
 
+.section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 130px 100px;
+    gap: 90px;
+
+    background: rgba(249, 249, 249, 0.15);
+    box-shadow: 0 0 30px rgba(33, 42, 53, 0.13);
+    border-radius: 50px;
+}
+
 .site-container {
     min-height: 100vh;
     display: flex;
@@ -50,6 +62,18 @@ html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: contain;
+}
+
+.welcome-card {
+    filter: drop-shadow(0px 0px 30px rgba(33, 42, 53, 0.13));
+    border-radius: 40px;
+    height: 100%;
+    width: 100%;
+    padding: 60px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
 }
 
 .card {
@@ -87,18 +111,6 @@ html {
     flex-direction: column;
     gap: 40px;
 
-}
-
-.section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 130px 100px;
-    gap: 90px;
-
-    background: rgba(249, 249, 249, 0.15);
-    box-shadow: 0 0 30px rgba(33, 42, 53, 0.13);
-    border-radius: 50px;
 }
 
 .section__subtitle {
