--- a/src/styles/components/navBar.css
+++ b/src/styles/components/navBar.css
@@ -18,18 +18,11 @@
     min-width: 40px;
 }
 
-.navbar__links {
+.navbar__fonts {
     display: flex;
     align-items: center;
-    gap: 100px;
+    gap: 82px;
     cursor: pointer;
-}
-
-.navbar__link {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 19px;
-    text-transform: uppercase;
 }
 
 .navbar__phone {
