- Исправил карточки в блоке "о нас"

--- a/src/styles/overall.css
+++ b/src/styles/overall.css
@@ -137,4 +137,5 @@ html {
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    transform: rotateY(180deg);
 }
