--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@
 
 @import "./components/notFound.css";
 @import "./components/navBar.css";
+@import "./components/orderForm.css";
 
 
 @import "./pages/main.css";
