--- a/src/styles/pages/main.css
+++ b/src/styles/pages/main.css
@@ -131,7 +131,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    padding: 30px;
+    padding: 25px;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
 }
@@ -219,4 +219,44 @@
     width: 100%;
     text-align: center;
     align-items: center;
+}
+
+.projects__grid {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 28px;
+    grid-auto-rows: 1fr;
+}
+
+.projects__card {
+    width: 100%;
+    border-radius: 30px;
+    background: #000;
+    padding: 37px 42px;
+    aspect-ratio: 1 / 0.84;
+}
+
+.projects__card {
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    transition: ease-in-out 0.2s;
+    cursor: pointer;
+}
+
+.project__greenhouse {
+    background-image: url("src/assets/greenhouse_preview_off.png");
+}
+
+.project__greenhouse:hover {
+    background-image: url("src/assets/greenhouse_preview_on.png");
+}
+
+.project__iamelect {
+    background-image: url("src/assets/iamelect_preview_off.png");
+}
+
+.project__iamelect:hover {
+    background-image: url("src/assets/iamelect_preview_on.png");
 }
