- Добавил Футер - Начал делать анимированный Хедер - Сделал анимацию шрифта - Начал добавлять неразрывне пробелы и тире, где это поможет с читабельностью - Начал переход на процентные отступы

--- a/src/styles/overall.css
+++ b/src/styles/overall.css
@@ -54,7 +54,8 @@ html {
     flex: 1;
     width: 100%;
     gap: 98px;
-    /*margin-bottom: 250px;*/
+    margin-bottom: 40px;
+    margin-top: 108px;
 }
 
 .logo {
@@ -69,11 +70,12 @@ html {
     border-radius: 40px;
     height: 100%;
     width: 100%;
-    padding: 43px;
+    padding: 5%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+    min-width: 343px;
 }
 
 .card {
@@ -149,7 +151,6 @@ html {
 .contacts {
     display: flex;
     flex-direction: row;
-    align-items: flex-start;
     justify-content: space-between;
     padding: 92px 100px;
     gap: 120px;
@@ -204,13 +205,20 @@ html {
 }
 
 .contacts__social {
-    gap: 13px
+    gap: 13px;
+    display: inline-flex;
+    padding-left: 13px;
+}
+
+.footer__social {
+    gap: 10px;
+    display: inline-flex;
+    justify-content: center;
+    margin: 0;
 }
 
 .social {
-    display: inline-flex;
     align-items: center;
-    padding-left: 13px;
 }
 
 .social__item {
@@ -249,4 +257,10 @@ html {
 .contacts__social__link--telegram {
     width: 18px;
     height: 14px;
+}
+
+.footer__contacts {
+    text-align: center;
+    justify-content: center;
+    display: none;
 }
