--- a/src/styles/components/navBar.css
+++ b/src/styles/components/navBar.css
@@ -1,29 +1,38 @@
 .navbar-bg {
-    background-color: rgba(2, 7, 37, 0.8);
+    background-color: rgba(2, 7, 37, 1);
     width: 100%;
+    height: 108px;
+    position: fixed;
+    z-index: 999;
 }
 
 .navbar {
-    height: 108px;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
     width: 100%;
-    z-index: 100;
+    gap: 50px;
+
 }
 
 .navbar__logo {
-    height: 27%;
+    /*height: 27%;*/
+    /*height: 30px;*/
+    height: 100%;
     width: 11%;
-    min-width: 40px;
+    min-width: 130px;
+    flex-shrink: 0;
 }
 
 .navbar__fonts {
     display: flex;
     align-items: center;
+    justify-self: flex-end;
     gap: 82px;
     cursor: pointer;
 }
+
 
 .navbar__phone {
     font-weight: 600;
