--- a/src/styles/components/orderForm.css
+++ b/src/styles/components/orderForm.css
@@ -8,6 +8,7 @@
 
 .form__input {
     width: 100%;
+    min-width: 230px;
     border-radius: 10px;
     margin-top: 12px;
     background-color: rgba(249, 249, 249, 0.85);
