--- a/src/styles/media-quiries.css
+++ b/src/styles/media-quiries.css
@@ -1,13 +1,62 @@
 @media (max-width: 1300px) {
+    .navbar__fonts {
+        gap: 50px;
+    }
 
+    .container {
+        padding: 0 70px;
+    }
+
+    .content {
+        display: flex;
+        flex-direction: column;
+        flex: 1;
+        width: 100%;
+        gap: 98px;
+        /*margin-bottom: 250px;*/
+    }
+}
+
+@media (max-width: 1160px) {
+    .navbar__fonts {
+        gap: 40px;
+    }
 }
 
 @media (max-width: 1024px) {
+    .navbar__fonts {
+        gap: 30px;
+    }
 
+    .container {
+        padding: 0 60px;
+    }
+
+    .navbar__font {
+        font-size: 13px;
+    }
+
+    .navbar__logo {
+        min-width: 100px;
+    }
+
+    .navbar {
+        gap: 35px;
+    }
 }
 
 @media (max-width: 768px) {
+    .footer__contacts {
+        display: inherit;
+    }
 
+    .contacts__info {
+        display: none;
+    }
+
+    .navbar {
+        flex-direction: row-reverse;
+    }
 }
 
 @media (max-width: 600px) {
