--- a/src/styles/pages/about.css
+++ b/src/styles/pages/about.css
@@ -1,10 +1,11 @@
 .about__welcome {
-    height: 616px;
+    min-height: max-content;
     margin-top: 62px;
     width: 100%;
     padding: 90px 150px 70px;
     background: linear-gradient(225deg, rgba(0, 178, 255, 0.80) 0%, rgba(157, 0, 198, 0.80) 100%);
     justify-content: space-between;
+    gap: 30px;
 }
 
 .skills {
@@ -14,6 +15,10 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+}
+
+.about__title {
+    text-align: center;
 }
 
 .skills div {
