--- a/src/styles/overall.css
+++ b/src/styles/overall.css
@@ -126,6 +126,7 @@ html {
 
 .flashcard {
     position: relative;
+    display: inline-block;
     width: 100%;
     height: 100%;
     aspect-ratio: 1 / 1;
@@ -134,6 +135,15 @@ html {
     border-radius: 40px;
     transform-style: preserve-3d;
     transform: rotateY(180deg);
+}
+
+.flashcard--mobile {
+    margin: 0 1rem;
+    width: 80%;
+}
+
+.flashcard--mobile:first-child {
+    margin-left: 0;
 }
 
 
