--- a/src/styles/overall.css
+++ b/src/styles/overall.css
@@ -129,9 +129,11 @@ html {
     display: inline-block;
     width: 100%;
     height: 100%;
+    max-height: 300px;
+    min-height: 300px;
+    max-width: 300px;
     aspect-ratio: 1 / 1;
     cursor: pointer;
-    min-height: 120px;
     border-radius: 40px;
     transform-style: preserve-3d;
     transform: rotateY(180deg);
@@ -146,15 +148,13 @@ html {
     margin-left: 0;
 }
 
-
-
-
 .flashcard__back {
     position: absolute;
     width: 100%;
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
+    overflow: hidden;
     transform: rotateY(180deg);
 }
 
