--- a/src/styles/overall.css
+++ b/src/styles/overall.css
@@ -154,8 +154,12 @@ html {
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    overflow: hidden;
+    overflow-y: scroll;
     transform: rotateY(180deg);
+}
+
+.flashcard__back::-webkit-scrollbar {
+    display: none;
 }
 
 .contacts {
