--- a/src/styles/pages/main.css
+++ b/src/styles/pages/main.css
@@ -36,6 +36,7 @@
 .welcome__logo {
     width: 360px;
     height: 60px;
+    flex-shrink: 0;
 }
 
 .workflow__cards {
@@ -355,14 +356,6 @@
     background: #707070;
 }
 
-.carousel__wrapper {
-    width: 100%;
-    background: red;
-    display: grid;
-    place-items: center center;
-
-}
-
 .carousel__container {
     display: inline;
     width: 30%;
@@ -383,14 +376,111 @@
     width: 100%;
 }
 
-.carousel__card {
+
+.swiper__wrapper {
     position: relative;
-    display: inline-block;
-    height: 80px;
-    width: 80px;
-    background: white;
-    color: black;
-    margin: 2rem 1rem;
-    border-radius: 15px;
+    display: flex;
+    width: 100%;
+    height: 500px;
+    overflow: hidden;
+}
+
+.arrows {
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    height: 25px;
+    width: 70px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.arrow {
     cursor: pointer;
+    width: 25px;
+    height: 25px;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+.arrow--left {
+    background-image: url("src/assets/arrowcircleright.svg");
+    rotate: 180deg;
+}
+
+.arrow--right {
+    background-image: url("src/assets/arrowcircleright.svg");
+}
+
+.bullets {
+    width: min-content;
+    height: auto;
+    display: flex;
+    gap: 10px;
+    position: absolute;
+    bottom: 0;
+
+    left: 0;
+    right: 0;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.bullet {
+    height: 5px;
+    width: 5px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.swiper__card {
+    position: absolute;
+    display: flex;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
+    gap: 5%;
+    padding-bottom: 25px;
+}
+
+.projects__mockup {
+    height: 100%;
+    width: 70%;
+    min-width: 200px;
+    max-width: 300px;
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.mockup1 {
+    background-image: url("src/assets/projects__carousel_1.png");
+}
+
+.mockup2 {
+    background-image: url("src/assets/projects__carousel_2.png");
+}
+
+.mockup3 {
+    background-image: url("src/assets/projects__carousel_3.png");
+}
+
+.mockup4 {
+    background-image: url("src/assets/projects__carousel_4.png");
+}
+
+.projects__info {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 20px;
+}
+
+.projects__info__body {
+    height: 100%;
+    width: 100%;
+    text-align: left;
 }
