- Сделала слайдеры. Вертикальный и горизонтальный

--- a/src/styles/pages/main.css
+++ b/src/styles/pages/main.css
@@ -184,6 +184,10 @@
     white-space: normal;
 }
 
+.carousel__list {
+    padding-left: 15px;
+}
+
 .team__project {
     background-image: url('/src/assets/project_manager.svg');
 }
@@ -207,12 +211,10 @@
     height: 70%;
 }
 
-.team__programmer--blur {
+.team__programmer--mobile {
     background-image: url('/src/assets/programmer.svg');
-    opacity: .7;
-    /*background-repeat: initial;*/
-    /*width: 83%;*/
 }
+
 
 .programmer__img {
     width: 65%;
@@ -379,9 +381,17 @@
 
 .swiper__wrapper {
     position: relative;
-    display: flex;
+    display: inline-flex;
     width: 100%;
     height: 500px;
+    overflow: hidden;
+}
+
+.programmer__carousel {
+    position: relative;
+    display: inline-flex;
+    width: 100%;
+    height: 100%;
     overflow: hidden;
 }
 
@@ -389,17 +399,16 @@
     position: absolute;
     bottom: 10px;
     right: 10px;
-    height: 25px;
-    width: 70px;
     display: flex;
-    justify-content: space-between;
+    gap: 15px;
     align-items: center;
+    z-index: 2;
 }
 
 .arrow {
     cursor: pointer;
-    width: 25px;
-    height: 25px;
+    width: 30px;
+    height: 30px;
     background-position: center;
     background-size: contain;
     background-repeat: no-repeat;
@@ -419,12 +428,25 @@
     display: flex;
     gap: 10px;
     position: absolute;
-    bottom: 0;
+    z-index: 2;
 
+    bottom: 0;
     left: 0;
     right: 0;
     margin-left: auto;
     margin-right: auto;
+}
+
+.carousel__bullets {
+    width: min-content;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    position: absolute;
+    z-index: 2;
+
+    top: 1em;
+    left: 0;
 }
 
 .bullet {
@@ -442,6 +464,22 @@
     height: 100%;
     gap: 5%;
     padding-bottom: 25px;
+}
+
+.carousel__card {
+    position: absolute;
+    display: flex;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
+}
+
+.carousel__back {
+    padding: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
+    overflow: hidden;
 }
 
 .projects__mockup {
