--- a/src/styles/overall.css
+++ b/src/styles/overall.css
@@ -154,7 +154,7 @@ html {
     height: 100%;
     -webkit-backface-visibility: hidden;
     backface-visibility: hidden;
-    overflow-y: scroll;
+    overflow-y: hidden;
     transform: rotateY(180deg);
 }
 
